--- a/.flint/static/base.css
+++ b/.flint/static/base.css
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: #404040;
+  background: #393E46;
 }
 
 body * {
@@ -130,4 +130,12 @@ body tr { display: table-row; }
 
 input[type='search']::-webkit-input-placeholder {
   color: #6E6E6E;
+}
+
+.ace_scroller, .ace_editor {
+  border-bottom-left-radius: 10px;
+}
+
+.ace_content {
+  background-color: #EEEEEE;
 }
